--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,12 +10,12 @@ $large-breakpoint: 64em !default;
 $medium-breakpoint: 42em !default;
 
 // Headers
-$header-heading-color: {{ site.color.header | default: "#fff" }} !default;
-$header-bg-color: {{ site.color.gradient_right | default: "#eae6ff" }} !default;
+// $header-heading-color: {{ site.color.header | default: "#fff" }} !default; 
+$header-bg-color: {{ site.color.gradient_right | default: "#eae6ff" }} !default; //was#159957
 $header-bg-color-secondary: {{ site.color.gradient_left | default: "#155799" }} !default;
 
 // Text
-$section-headings-color: {{ site.color.section_title | default: site.color.gradient_right | default: "#159957" }} !default;
+$section-headings-color: {{ site.color.section_title | default: site.color.gradient_right | default: "#8c77ff" }} !default; //was#159957
 $body-text-color: #606c71 !default;
 $body-link-color: {{ site.color.link | default: site.color.gradient_left | default: "#1e6bb8" }} !default;
 $blockquote-text-color: #819198 !default;
