--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,8 +6,8 @@ $medium-breakpoint: 42em !default;
 
 // Headers
 // $header-heading-color: {{ site.color.header | default: "#fff" }} !default; 
-$header-bg-color: {{ site.color.gradient_left | default: "#3955E7" }} !default; //was#159957
-$header-bg-color-secondary: {{ site.color.gradient_right | default: "#EAE6FF" }} !default;
+$header-bg-color: {{ site.color.gradient_left | default: "#EAE6FF" }} !default; //was#159957
+$header-bg-color-secondary: {{ site.color.gradient_right | default: "#3955E7" }} !default;
 
 // Text
 $section-headings-color: {{ site.color.section_title | default: site.color.gradient_right | default: "#3955E7" }} !default; //was#159957
