--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -34,7 +34,7 @@ $hr-border-color: #eff0f1 !default;
     height: 0.9em;
     padding-right: 0.5em;
     vertical-align: middle;
-    background: url("https://upload.wikimedia.org/wikipedia/en/c/c1/PathVisio_logo.png");
+    background: url("https://pathvisio.github.io/images/logos/UM_PathVIsio_BiGCaT_Logo.png");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center center;
