--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,9 +24,7 @@ $border-color: #dce6f0 !default;
 $table-border-color: #e9ebec !default;
 $hr-border-color: #eff0f1 !default;
 
-@import 'jekyll-theme-cayman';
-
-{% if site.logo_url %}
+//{% if site.logo_url %}
 .project-name::before {
     content: " ";
     display: inline-block;
@@ -39,6 +37,10 @@ $hr-border-color: #eff0f1 !default;
     background-repeat: no-repeat;
     background-position: center center;
 }
+
+@import 'jekyll-theme-cayman';
+
+
 {% endif %}
 
 {% if site.hide_first_title %}
