--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -35,7 +35,7 @@ $hr-border-color: #eff0f1 !default;
     height: 0.9em;
     padding-right: 0.5em;
     vertical-align: middle;
-    background: url("https://pathvisio.github.io/images/logos/UM_PathVIsio_BiGCaT_Logo.png");
+    background: url("{{site.logo_url}}");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center center;
