--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,7 +7,7 @@ $medium-breakpoint: 42em !default;
 // Headers
 // $header-heading-color: {{ site.color.header | default: "#fff" }} !default; 
 $header-bg-color: {{ site.color.gradient_left | default: "#877898" }} !default; //light purple
-$header-bg-color-secondary: {{ site.color.gradient_right | default: "#2F255E" }} //dark purple
+$header-bg-color-secondary: {{ site.color.gradient_right | default: "#2F255E" }} !default; //dark purple
 
 // Text
 $section-headings-color: {{ site.color.section_title | default: site.color.gradient_right | default: "#3955E7" }} !default; //was#159957
