--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,7 +10,7 @@ $header-bg-color-secondary: {{ site.color.gradient_right | default: "#877898" }}
 $header-bg-color: {{ site.color.gradient_left | default: "#6495ED" }} !default; //light blue
 
 // Text
-$section-headings-color: {{ site.color.section_title | default: site.color.gradient_right | default: "#3955E7" }} !default; //was#159957
+$section-headings-color: {{ site.color.section_title | default: site.color.gradient_right | default: "#6495ED" }} !default; //was#159957
 $body-text-color: #606c71 !default;
 $body-link-color: {{ site.color.link | default: site.color.gradient_left | default: "#1e6bb8" }} !default;
 $blockquote-text-color: #819198 !default;
