--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,7 +10,7 @@ $header-bg-color-secondary: {{ site.color.gradient_right | default: "#2F255E" }}
 $header-bg-color: {{ site.color.gradient_left | default: "#6495ED" }} !default; //light blue
 
 // Text
-$section-headings-color: {{ site.color.section_title | default: site.color.gradient_right | default: "#877898" }} !default; //purple
+$section-headings-color: {{ site.color.section_title | default: site.color.gradient_right | default: "#2F255E" }} !default; //dark purple
 $body-text-color: #606c71 !default;
 $body-link-color: {{ site.color.link | default: site.color.gradient_left | default: "#1e6bb8" }} !default;
 $blockquote-text-color: #819198 !default;
